# Kmplete

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/icons_fonts/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
src/: CMakeLists.txt  cpp.hint
src/AssetsCompiler/: CMakeLists.txt  assets_compiler.cpp  assets_compiler.h  main.cpp
src/AssetsCompilerInterfaceLib/: CMakeLists.txt
src/AssetsInterfaceLib/: CMakeLists.txt
src/AssetsInterfaceLib/src/: assets_interface.cpp
src/BaseLib/: CMakeLists.txt
src/BaseLib/tests/: CMakeLists.txt  macro_tests.cpp  platform_tests.cpp
src/Editor/: CMakeLists.txt  editor_assets.json.in
src/Editor/scripts/: po_compile_en.sh  po_compile_ru.sh  po_update_en.sh  po_update_ru.sh
src/Editor/src/: editor_application.cpp  editor_application.h  editor_frame_listener.cpp  editor_frame_listener.h  editor_ui.cpp  editor_ui.h  editor_ui_compositor.cpp  editor_ui_compositor.h  editor_ui_impl.cpp  editor_ui_impl.h  editor_ui_impl_opengl_glfw.cpp  editor_ui_impl_opengl_glfw.h  localization_base.h  main.cpp  shortcuts.h  system_metrics_frame_listener.cpp  system_metrics_frame_listener.h  ui_identifiers.h  ui_utils.cpp  ui_utils.h
src/Engine/: CMakeLists.txt
src/Engine/include/: CMakeLists.txt
src/Engine/scripts/: po_compile.sh  po_compile_en.sh  po_compile_ru.sh  po_update.sh  po_update_en.sh  po_update_ru.sh
src/Engine/src/: CMakeLists.txt
src/Engine/tests/: CMakeLists.txt
src/FileDialogsLib/: CMakeLists.txt
src/FileDialogsLib/src/: file_dialogs.cpp
src/FileDialogsLib/tests/: file_dialogs_tests.cpp
src/FilesystemLib/: CMakeLists.txt
src/FilesystemLib/src/: filesystem.cpp
src/FilesystemLib/tests/: CMakeLists.txt  filesystem_tests.cpp
src/ImGuiUtilsLib/: CMakeLists.txt
src/ImGuiUtilsLib/src/: helper_functions.cpp  implementation.cpp  implementation_glfw_opengl.cpp  scope_guards.cpp  ui_utils.cpp
src/JsonLib/: CMakeLists.txt
src/JsonLib/src/: json_document.cpp  json_reader.cpp  json_scope.cpp  json_writer.cpp
src/JsonLib/tests/: CMakeLists.txt  json_document_tests.cpp  json_reader_tests.cpp  json_writer_tests.cpp
src/Libraries/AssetsCompilerInterfaceLib/: CMakeLists.txt
src/Libraries/AssetsInterfaceLib/: CMakeLists.txt
src/Libraries/BaseLib/: CMakeLists.txt
src/Libraries/Engine/: CMakeLists.txt
src/Libraries/FileDialogsLib/: CMakeLists.txt
src/Libraries/FilesystemLib/: CMakeLists.txt
src/Libraries/ImGuiUtilsLib/: CMakeLists.txt
src/Libraries/JsonLib/: CMakeLists.txt
src/Libraries/LoggerLib/: CMakeLists.txt
src/Libraries/MathLib/: CMakeLists.txt
src/Libraries/ProfilerLib/: CMakeLists.txt
src/Libraries/ShaderCompilerLib/: CMakeLists.txt
src/Libraries/ShaderCompilerToolInterfaceLib/: CMakeLists.txt
src/Libraries/TimeLib/: CMakeLists.txt
src/Libraries/TranslatorInterfaceLib/: CMakeLists.txt
src/Libraries/UtilsLib/: CMakeLists.txt
src/Libraries/VersionLib/: CMakeLists.txt  kmplete_version.cpp.in
src/LoggerLib/: CMakeLists.txt
src/LoggerLib/src/: log.cpp
src/MathLib/: CMakeLists.txt
src/MathLib/src/: math.cpp
src/MathLib/tests/: CMakeLists.txt  geometry_tests.cpp  math_tests.cpp
src/ProfilerLib/: CMakeLists.txt
src/ProfilerLib/src/: profiler.cpp
src/Resources/: Kmplete_settings_example.json
src/Resources/json/: Kmplete_settings_example.json  Kmplete_settings_tests_example.json
src/Sandboxes/: CMakeLists.txt
src/Sandboxes/DrawIndirect/: CMakeLists.txt  draw_indirect_application.cpp  draw_indirect_application.h  draw_indirect_frame_listener.cpp  draw_indirect_frame_listener.h  main.cpp
src/Sandboxes/InstancedRendering/: CMakeLists.txt  instanced_rendering_application.cpp  instanced_rendering_application.h  instanced_rendering_frame_listener.cpp  instanced_rendering_frame_listener.h  main.cpp
src/Sandboxes/InstancedRenderingVulkan/: CMakeLists.txt  instanced_rendering_vulkan_application.cpp  instanced_rendering_vulkan_application.h  instanced_rendering_vulkan_main_frame_listener.cpp  instanced_rendering_vulkan_main_frame_listener.h  main.cpp
src/Sandboxes/MultiplePipelines/: CMakeLists.txt  main.cpp  multiple_pipelines_application.cpp  multiple_pipelines_application.h  multiple_pipelines_frame_listener.cpp  multiple_pipelines_frame_listener.h
src/Sandboxes/MultiplePipelinesVulkan/: CMakeLists.txt  main.cpp  multiple_pipelines_vulkan_application.cpp  multiple_pipelines_vulkan_application.h  multiple_pipelines_vulkan_main_frame_listener.cpp  multiple_pipelines_vulkan_main_frame_listener.h
src/Sandboxes/PostProcessing/: CMakeLists.txt  main.cpp  post_processing_application.cpp  post_processing_application.h  post_processing_frame_listener.cpp  post_processing_frame_listener.h
src/Sandboxes/PushConstants/: CMakeLists.txt  main.cpp  push_constants_application.cpp  push_constants_application.h  push_constants_frame_listener.cpp  push_constants_frame_listener.h
src/Sandboxes/Resources/: instanced_rendering.vert  instanced_rendering.vert.spv  multiple_pipelines_buffered_color.frag  multiple_pipelines_buffered_color.vert  multiple_pipelines_buffered_color.vert.spv  multiple_pipelines_fixed_color.vert  multiple_pipelines_fixed_color.vert.spv  post_processing_post.frag  post_processing_post.frag.spv  post_processing_post.vert  post_processing_post.vert.spv  post_processing_pre.frag  post_processing_pre.vert  post_processing_pre.vert.spv  push_constants.vert  storage_buffers.vert  storage_buffers.vert.spv  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  uniform_buffers.vert  uniform_buffers.vert.spv
src/Sandboxes/StorageBuffers/: CMakeLists.txt  (+5 more)
src/TimeLib/: CMakeLists.txt
src/Translator/: CMakeLists.txt  main.cpp  translator.cpp  translator.h
src/TranslatorInterfaceLib/: CMakeLists.txt
src/UtilsLib/: CMakeLists.txt
src/Version/: CMakeLists.txt  fmncv_version.cpp.in  fmncv_version.h  kmplete_version.cpp.in  kmplete_version.h
src/VersionLib/: CMakeLists.txt  kmplete_version.cpp.in
(+750 files in other folders)
